# cmake-exam-01

./: CMakeLists.txt  README.md  compiler-detects.cmake  libraries.cmake
cmake/: README.md
src/: main.cc  sdlpp.cc  sdlpp.h
windows/: app.manifest.xml  app.rc
